* ZipDirectoryReader has been moved to the Wikimedia\Mime library.
  No callers outside that library are known.
* The MediaWiki\Config\MutableConfig interface now extends
  MediaWiki\Config\Config. Implementing MutableConfig without implementing
  Config is no longer possible.
* The hook OutputPageMakeCategoryLinks, deprecated in 1.43, has been removed.
* …

=== Deprecations in 1.44 ===

* Various static methods on ChangeTags, deprecated since 1.41, each now emit
  deprecation warnings. Use service access to the ChangeTagsStore instead:
  addTags(), defineTag(), deleteTagEverywhere(), getDisplayTableName(),
  getSoftwareTags(), getTags(), getTagsWithData(), listDefinedTags(),
  listExplicitlyDefinedTags(), listSoftwareActivatedTags(),
  listSoftwareDefinedTags(), makeTagSummarySubquery(), modifyDisplayQuery(),
  purgeTagCacheAll(), tagUsageStatistics(), and updateTags().
* WikiPage::doEditUpdates(), deprecated since 1.32, is now emitting warnings.
  Use DerivedPageDataUpdater::doUpdates() instead.
* IDatabase::setTransactionListener() is now deprecated without replacement.
* ILBFactory::setWaitForReplicationListener() is now deprecated without
  replacement.
* Maintenance::beginTransaction(), Maintenance::commitTransaction(),
  Maintenance::rollbackTransaction(), and Maintenance::waitForReplication()
  are now deprecated. Use Maintenance::*TransactionRound() instead.
* The ReverseArrayIterator class, unused since 1.32, has been deprecated.
* LinksUpdate::getImages() has been deprecated, like ParserOutput::getImages().
  Instead, use ParserOutput::getLinkList( ParserOutputLinkTypes::MEDIA ).
* ResourceLoader::makeConfigSetScript() is now deprecated. Consider using
  package files instead. Or, you can return "mw.config.set()" combined with
  RL\Context::encodeJson, if available. If not, use FormatJson::encode.
* ...
* …

=== Other changes in 1.44 ===
* The ArticleProtect and ArticleProtectComplete hooks are now called when